app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: visittemple
spec:
  selector:
    app: visittemple
  ports:
  - port: 8080
    targetPort: 8080
