app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: visittemple-ingress
  labels:
    kcert.dev/ingress: "managed"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - temple.abhi.thoughtbrains.com
    secretName: temple-abhi-thoughtbrains-com
  rules:
  - host: "temple.abhi.thoughtbrains.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: visittemple
            port: 
                number: 8080
